--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "npm": "^6.3.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-nested-route": "^2.0.0",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
